fixing button spacing

--- a/main.css
+++ b/main.css
@@ -123,7 +123,7 @@ footer p {
 #map {
     height: 100%;
     width: 100%;
-  }
+}
 
 .noScroll {
     overflow: hidden;
@@ -265,7 +265,7 @@ fieldset {
     position: absolute;
     width: 5px;
     zoom: 0.01;
-  }
+}
 
 .typeInput label {
     margin: 0;
@@ -284,7 +284,7 @@ fieldset {
     overflow: hidden;
     font-size: .9em;
     font-weight: 500;
-  }
+}
 
 .walking label {
     border-radius: 0 5px 5px 0;
@@ -300,7 +300,7 @@ fieldset {
     color: #2d2d2d;
     background-color: #FF5300;
     transition: all 300ms cubic-bezier(0.4, 0.0, 0.2, 1);
-  }
+}
 
 #routeButtonContainer {
     display: flex;
@@ -386,7 +386,6 @@ fieldset {
     .mapButtons {
         width: 40vw;
     }
-
 }
 
 /* Large devices (desktops and large screens, 1000 and up) */
@@ -423,7 +422,6 @@ fieldset {
 
     .mapButtons {
         width: 30vw;
-        height: 3vh;
     }
 }
 
@@ -451,6 +449,7 @@ fieldset {
     .typeInput label {
         font-size: 1.2em;
     }
+    
     .mapButtons {
         width: 22vw;
         max-width: 400px;
